@@ -1,5 +1,11 @@
 2015-02-19  Natalia Portillo  <claunia@claunia.com>
 
+	* PropertyListParser.cs:
+	  Solve upstream bug, does not recognize UTF-8 XML with
+	  byte-order-mask as XML.
+
+2015-02-19  Natalia Portillo  <claunia@claunia.com>
+
 	* NSNumber.cs:
 	  More culture corrections.
 
